<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.RequesterActivity">

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:layout_constraintBottom_toTopOf="@id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="90dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="Requester"
        android:textColor="@color/light"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTitle"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title (e.g., Intel i7)"
            android:inputType="text"
            android:padding="15dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardQuantity"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTitle">

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quantity"
            android:inputType="number"
            android:padding="15dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/deleteOrderButton"
        android:layout_width="125dp"
        android:layout_height="61dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:drawableRight="@drawable/baseline_delete_24"
        android:gravity="center"
        android:paddingRight="20dp"
        android:text="Delete Order"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cardQuantity"
        app:layout_constraintStart_toEndOf="@+id/createOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="292dp" />

    <Button
        android:id="@+id/createOrderButton"
        android:layout_width="138dp"
        android:layout_height="59dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toStartOf="@id/deleteOrderButton"
        app:layout_constraintTop_toBottomOf="@id/cardQuantity"
        android:drawableRight="@drawable/baseline_add_circle_24"
        android:gravity="center"
        android:paddingRight="20dp"
        android:text="Create Order"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="292dp" />

    <TextView
        android:id="@+id/ordersListTextView"
        android:layout_width="386dp"
        android:layout_height="264dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="Order List:"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteOrderButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
